# i-fetch-rocks-sim

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/: README.md  copilot-instructions.md
.github/agents/: CircuitBuilder.agent.md  DeviceRE.agent.md
.github/skills/device-setup/: SKILL.md
.github/skills/sim-diagnosis/: SKILL.md
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: README.md  re-probe-setup.md  reverse-engineering.md  room-port-map.md  ship-topology.md  unknown-devices-ship-cpu.md
src/ifetchrocks_sim/: __init__.py  _drive_loader.py  analysis.py  backtrace.py  cli.py  labels.py  models.py  re_tools.py  reader.py  recording.py  ship_topology.py  simulator.py  stub_generator.py  validation.py
src/ifetchrocks_sim/devices/: README.md  Room.py  Template.py  large_network_node.py  network_node.py  network_power_node.py  unknown_device.py
src/ifetchrocks_sim/devices/controllers/: README.md
src/ifetchrocks_sim/devices/data_distribution/: README.md
src/ifetchrocks_sim/devices/data_monitors/: README.md
src/ifetchrocks_sim/devices/data_processing/: README.md
src/ifetchrocks_sim/devices/power_distribution/: README.md  generator_power_bus.py
src/ifetchrocks_sim/devices/utils/: device_utils.py  (+1 more)
src/ifetchrocks_sim/network/: README.md  __init__.py  data_network.py  data_network_manager.py  large_data_network.py
src/ifetchrocks_sim/testing/: README.md  __init__.py  circuit_builder.py  wire_assertions.py
tests/: test_imports.py  test_labels.py  test_network.py  test_reader.py  test_ship_topology.py
(+77 files in other folders)
