[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ifetchrocks-sim"
version = "0.1.0"
description = "Tools to load and inspect I Fetch Rocks save files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "securitycopper" }
]
keywords = ["i-fetch-rocks", "save-files", "simulator", "reverse-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
graph = [
  "pyvis>=0.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/securitycopper/i-fetch-rocks-sim"
Repository = "https://github.com/securitycopper/i-fetch-rocks-sim"
Issues = "https://github.com/securitycopper/i-fetch-rocks-sim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ifetchrocks_sim"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
